--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.17",
+    "@react-email/tailwind": "^0.0.16",
     "framer-motion": "^11.1.8",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "react-toastify": "^10.0.5",
+    "resend": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
